Increase countdown text max width to fix wrapping

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -175,5 +175,5 @@ input[type=number] {
 .countdownText {
   margin-top: 60px;
   font-size: 55px;
-  max-width: 750px;
+  max-width: 800px;
 }
